ReScaffold views for customer controller

--- a/TrashCollectorInc/Views/Customers/Index.cshtml
+++ b/TrashCollectorInc/Views/Customers/Index.cshtml
@@ -11,73 +11,78 @@
     <h4>Customer</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.StreetAddress)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.StreetAddress)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.CityName)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.CityName)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.State)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.State)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.ZipCode)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.StartPickupDate)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.StartPickupDate)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.SuspendPickup)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.SuspendPickup)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.OneTimePickupDateRequest)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.OneTimePickupDateRequest)
         </dd>
-        <dt class="col-sm-3">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.MonthlyCharge)
         </dt>
-        <dd class="col-sm-9">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.MonthlyCharge)
         </dd>
-   
+        <dt class = "col-sm-3">
+            @Html.DisplayNameFor(model => model.WeeklyPickupDay)
+        </dt>
+        <dd class = "col-sm-9">
+            @Html.DisplayFor(model => model.WeeklyPickupDay)
+        </dd>
     </dl>
 </div>
 <div>
