--- a/TrashCollectorInc/Views/Customers/Create.cshtml
+++ b/TrashCollectorInc/Views/Customers/Create.cshtml
@@ -1,19 +1,18 @@
 ﻿@model TrashCollectorInc.Models.Customer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>Customer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -65,17 +64,19 @@
                 <span asp-validation-for="OneTimePickupDateRequest" class="text-danger"></span>
             </div>
           
-          
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="WeeklyPickupDay" class="control-label"></label>
+                <select asp-for="WeeklyPickupDay" class ="form-control" asp-items="ViewBag.Weekday"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to Profile</a>
-   
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
