Add code to employee create method to find logged in employee

--- a/TrashCollectorInc/Views/Employees/Details.cshtml
+++ b/TrashCollectorInc/Views/Employees/Details.cshtml
@@ -11,18 +11,8 @@
     <h4>Customer</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
+  
+   
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StreetAddress)
         </dt>
@@ -47,12 +37,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.StartPickupDate)
         </dt>
@@ -71,18 +56,13 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.OneTimePickupDateRequest)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MonthlyCharge)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.MonthlyCharge)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdentityUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdentityUser.Id)
-        </dd>
+        </dd>*@
+     
     </dl>
 </div>
 <div>
