--- a/TrashCollectorInc/Views/Customers/Create.cshtml
+++ b/TrashCollectorInc/Views/Customers/Create.cshtml
@@ -66,7 +66,7 @@
           
             <div class="form-group">
                 <label asp-for="WeeklyPickupDay" class="control-label"></label>
-                <select asp-for="WeeklyPickupDay" class ="form-control" asp-items="ViewBag.Weekday"></select>
+                <select asp-for="WeeklyPickupDay" class ="form-control" asp-items="ViewBag.WeeklyPickupDay"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
