--- a/TrashCollectorInc/Views/Employees/Index.cshtml
+++ b/TrashCollectorInc/Views/Employees/Index.cshtml
@@ -84,7 +84,7 @@
             </td>
       
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="ConfirmPickup" asp-route-id="@item.Id">Confirm Pickup</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
