--- a/TrashCollectorInc/Views/Customers/Edit.cshtml
+++ b/TrashCollectorInc/Views/Customers/Edit.cshtml
@@ -67,7 +67,7 @@
           
             <div class="form-group">
                 <label asp-for="WeeklyPickupDay" class="control-label"></label>
-                <select asp-for="WeeklyPickupDay" class="form-control" asp-items="ViewBag.Weekday"></select>
+                <select asp-for="WeeklyPickupDay" class="form-control" asp-items="ViewBag.WeeklyPickupDay"></select>
                 <span asp-validation-for="WeeklyPickupDay" class="text-danger"></span>
             </div>
             <div class="form-group">
