--- a/TrashCollectorInc/Views/Employees/Index.cshtml
+++ b/TrashCollectorInc/Views/Employees/Index.cshtml
@@ -49,7 +49,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.OneTimePickupDateRequest)
             </th>
-
+            <th>
+                @Html.DisplayNameFor(model => model.MonthlyCharge)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -81,6 +83,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OneTimePickupDateRequest)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MonthlyCharge)
             </td>
       
             <td>
