Add code to employee index method to list zip and current day

--- a/TrashCollectorInc/Views/Employees/Edit.cshtml
+++ b/TrashCollectorInc/Views/Employees/Edit.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Profile</a>
 </div>
 
 @section Scripts {
